--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Bee's Park Rongai" />
   <meta property="og:description" content="Bee's Park Rongai - Home away from home" />
+  <meta property="og:dev" content=".mg" />
   <meta content="Bee's Park, Rongai, Home away from Home, gym, accomodation,spa,sauna, Bee's Park Rongai" name="keywords"/>
   <meta name="description" content="Bees Park Gym provide all round health and fitness services. We are optimistic that everyone who enrolled in our gym and fitness club will definitely derive huge value for their money. These are the services and amenities that will be made available to our clients;   
 
